# razer_hydra

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
include/razer_hydra/: hydra.h
launch/: hydra.launch
msg/: Hydra.msg
nodes/: CMakeLists.txt  hydra_node.cpp
razer_hydra/: CMakeLists.txt  README  configure_udev_rules  determine_hidraw_number.py  hydra.launch  manifest.xml
razer_hydra/config/: 99-hydra.rules  determine_hidraw_number.py
razer_hydra/include/razer_hydra/: filters.h  hydra.h
razer_hydra/msg/: Hydra.msg  HydraPaddle.msg  Raw.msg
razer_hydra/nodes/: CMakeLists.txt  driver.cpp  hydra_node.cpp
razer_hydra/src/: CMakeLists.txt  hydra.cpp
razer_hydra/tools/: CMakeLists.txt  print.cpp  record.cpp
src/: CMakeLists.txt  hydra.cpp
tools/: CMakeLists.txt  record.cpp
