<package>
  <name>razer_hydra</name>
  <version>0.0.1</version>
  <description>hydra</description>
  <maintainer email="aleeper@willowgarage.com">Adam Leeper</maintainer>

  <license></license>

  <url type="website"></url>
  <!-- <url type="bugtracker"></url> -->

  <author>Adam Leeper</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  
  <export>
  </export>
</package>
